@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+ * Copyright 1997-2008 Sun Microsystems, Inc. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -1337,6 +1337,9 @@ public class IMAPMessage extends MimeMessage {
 		checkExpunged();
 
 		flags = p.fetchFlags(getSequenceNumber());
+		// make sure flags is always set, even if server is broken
+		if (flags == null)
+		    flags = new Flags();
 	    } catch (ConnectionException cex) {
 		throw new FolderClosedException(folder, cex.getMessage());
 	    } catch (ProtocolException pex) {
